0.1.2 xxxx-xx-xx
================

 * mulrev: Now allows non-scalar arguments and can compute two-output division
           (mulrevtopair no longer available)

 * All reverse operations: Now return a trivial decoration information at best,
                           in conformance with IEEE 1788

Bugfixes
 * Compatibility with GNU Octave 4.0 (bug #43925)
 * Build problems with environment variables CCFLAGS, LDFLAGS

0.1.1 2015-02-01
================

 * Increased speed of computation for large matrices
 
 * Improved performance for fma and dot
 
 * mpfr_vector_dot_d: Changed syntax for faster computation on intervals

 * Decorated versions of mtimes, mldivide, mpower, inv and reduction
   operations sum, dot, subabs, subsquare
 
 * Renamed function sumsquare to sumsq in accordance with GNU Octave function
   names
 
 * New function: fzero for finding all roots of an interval arithmetic function

Bugfixes
 * nextout: Function returned wrong results
 * exacttointerval: Now produces bare intervals instead of decorated intervals
                    in conformance with IEEE 1788
 * atanh: Function returned wrong results for +-1
 * dot: Function returned wrong results for some inputs
 * fma: Function returned wrong results for some inputs
 * infsup: Function returned wrong interval boundaries for decimal numbers,
           function failed on mixed numerical and string boundaries in single
           cell array parameter
 * mulrevtopair: Fixed order of operands in conformance with IEEE 1788 and
                 wrong results when evaluated on intervals that contain zero

0.1.0 2015-01-21
================

Initial release version, which already contains all required operations of the
preliminary standard document IEEE P1788.