@@ -3,6 +3,7 @@
 ## 
 ## Marco Nehmeier (nehmeier@informatik.uni-wuerzburg.de)
 ## Maximilian Kiesner (maximilian.kiesner@stud-mail.uni-wuerzburg.de)
+## Oliver Heimlich (oheim@posteo.de)
 ## 
 ## Department of Computer Science
 ## University of Wuerzburg, Germany
@@ -2055,7 +2056,7 @@
 %!         fma (infsup (-0.5, -0.1), infsup ((-inf), 3.0), infsup (-0.1, 0.1)), ...
 %!         infsup ("-0X1.999999999999AP+0", inf)))
 
-%!xtest "minimal.pown_test";
+%!test "minimal.pown_test";
 %! assert (eq (...
 %!         pown (infsup (), 0), ...
 %!         infsup ()))
@@ -2311,7 +2312,7 @@
 %!         exp (infsup ("0X1.78025C8B3FD39P+3", "0X1.9FD8EEF3FA79BP+4")), ...
 %!         infsup ("0X1.EF461A783114CP+16", "0X1.691D36C6B008CP+37")))
 
-%!xtest "minimal.exp2_test";
+%!test "minimal.exp2_test";
 %! assert (eq (...
 %!         pow2 (infsup ()), ...
 %!         infsup ()))
@@ -2352,7 +2353,7 @@
 %!         pow2 (infsup ("0X1.78025C8B3FD39P+3", "0X1.9FD8EEF3FA79BP+4")), ...
 %!         infsup ("0X1.AEA0000721857P+11", "0X1.FCA0555555559P+25")))
 
-%!xtest "minimal.exp10_test";
+%!test "minimal.exp10_test";
 %! assert (eq (...
 %!         pow10 (infsup ()), ...
 %!         infsup ()))
@@ -3202,6 +3203,80 @@
 %!         abs (infsup ((-inf), -2.2)), ...
 %!         infsup (2.2, inf)))
 
+%!test "minimal.abs_rev_test";
+%! assert (eq (...
+%!         absrev (infsup (), infsup (-inf, inf)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup (0.0, 1.0), infsup ()), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup (0.0, 1.0), infsup (7.0, 9.0)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup (), infsup (0.0, 1.0)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup (-2.0, -1.0), infsup (-inf, inf)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup (1.0, 1.0), infsup (-inf, inf)), ...
+%!         infsup (-1.0, 1.0)))
+%! assert (eq (...
+%!         absrev (infsup (0.0, 0.0), infsup (-inf, inf)), ...
+%!         infsup (0.0, 0.0)))
+%! assert (eq (...
+%!         absrev (infsup (-1.0, -1.0), infsup (-inf, inf)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023"), infsup (-inf, inf)), ...
+%!         infsup ("-0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023")))
+%! assert (eq (...
+%!         absrev (infsup ("0x1p-1022", "0x1p-1022"), infsup (-inf, inf)), ...
+%!         infsup ("-0x1p-1022", "0x1p-1022")))
+%! assert (eq (...
+%!         absrev (infsup ("-0x1p-1022", "-0x1p-1022"), infsup (-inf, inf)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023"), infsup (-inf, inf)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup (1.0, 2.0), infsup (-inf, inf)), ...
+%!         infsup (-2.0, 2.0)))
+%! assert (eq (...
+%!         absrev (infsup (1.0, 2.0), infsup (0.0, 2.0)), ...
+%!         infsup (1.0, 2.0)))
+%! assert (eq (...
+%!         absrev (infsup (0.0, 1.0), infsup (-0.5, 2.0)), ...
+%!         infsup (-0.5, 1.0)))
+%! assert (eq (...
+%!         absrev (infsup (-1.0, 1.0), infsup (-inf, inf)), ...
+%!         infsup (-1.0, 1.0)))
+%! assert (eq (...
+%!         absrev (infsup (-1.0, 0.0), infsup (-inf, inf)), ...
+%!         infsup (0.0, 0.0)))
+%! assert (eq (...
+%!         absrev (infsup (0.0, inf), infsup (-inf, inf)), ...
+%!         infsup (-inf, inf)))
+%! assert (eq (...
+%!         absrev (infsup (-inf, inf), infsup (-inf, inf)), ...
+%!         infsup (-inf, inf)))
+%! assert (eq (...
+%!         absrev (infsup ((-inf), 0.0), infsup (-inf, inf)), ...
+%!         infsup (0.0, 0.0)))
+%! assert (eq (...
+%!         absrev (infsup (1.0, inf), infsup ((-inf), 0.0)), ...
+%!         infsup ((-inf), -1.0)))
+%! assert (eq (...
+%!         absrev (infsup (-1.0, inf), infsup (-inf, inf)), ...
+%!         infsup (-inf, inf)))
+%! assert (eq (...
+%!         absrev (infsup ((-inf), -1.0), infsup (-inf, inf)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         absrev (infsup ((-inf), 1.0), infsup (-inf, inf)), ...
+%!         infsup (-1.0, 1.0)))
+
 %!test "minimal.min_test";
 %! assert (eq (...
 %!         min (infsup (), infsup (1.0, 2.0)), ...
@@ -3271,6 +3346,230 @@
 %! assert (eq (...
 %!         max (infsup (-7.0, -5.0), infsup (2.0, 4.0)), ...
 %!         infsup (2.0, 4.0)))
+
+%!test "minimal.atan2_test";
+%! assert (eq (...
+%!         atan2 (infsup (), infsup ()), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         atan2 (infsup (), infsup (-inf, inf)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         atan2 (infsup (-inf, inf), infsup ()), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, 0.0), infsup (0.0, 0.0)), ...
+%!         infsup ()))
+%! assert (eq (...
+%!         atan2 (infsup (-inf, inf), infsup (-inf, inf)), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, 0.0), infsup ((-inf), 0.0)), ...
+%!         infsup ("0x1.921FB54442D18p1", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, 0.0), infsup (0.0, inf)), ...
+%!         infsup (0.0, 0.0)))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, inf), infsup (0.0, 0.0)), ...
+%!         infsup ("0x1.921FB54442D18p0", "0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), 0.0), infsup (0.0, 0.0)), ...
+%!         infsup ("-0x1.921FB54442D19p0", "-0x1.921FB54442D18p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1p-1022", 0.0), infsup ("-0x1p-1022", "-0x1p-1022")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (1.0, 1.0), infsup (-1.0, -1.0)), ...
+%!         infsup ("0x1.2D97C7F3321D2p1", "0x1.2D97C7F3321D3p1")))
+%! assert (eq (...
+%!         atan2 (infsup (1.0, 1.0), infsup (1.0, 1.0)), ...
+%!         infsup ("0x1.921FB54442D18p-1", "0x1.921FB54442D19p-1")))
+%! assert (eq (...
+%!         atan2 (infsup (-1.0, -1.0), infsup (1.0, 1.0)), ...
+%!         infsup ("-0x1.921FB54442D19p-1", "-0x1.921FB54442D18p-1")))
+%! assert (eq (...
+%!         atan2 (infsup (-1.0, -1.0), infsup (-1.0, -1.0)), ...
+%!         infsup ("-0x1.2D97C7F3321D3p1", "-0x1.2D97C7F3321D2p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1p-1022", "0x1p-1022"), infsup ("-0x1p-1022", "-0x1p-1022")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1p-1022", "0x1p-1022"), infsup ("0x1p-1022", "0x1p-1022")), ...
+%!         infsup ("-0x1.921FB54442D19p-1", "+0x1.921FB54442D19p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1p-1022", "-0x1p-1022"), infsup ("-0x1p-1022", "0x1p-1022")), ...
+%!         infsup ("-0x1.2D97C7F3321D3p1", "-0x1.921FB54442D18p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1p-1022", "0x1p-1022"), infsup ("-0x1p-1022", "0x1p-1022")), ...
+%!         infsup ("0x1.921FB54442D18p-1", "0x1.2D97C7F3321D3p1")))
+%! assert (eq (...
+%!         atan2 (infsup (-2.0, 2.0), infsup (-3.0, -1.0)), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, 2.0), infsup (-3.0, -1.0)), ...
+%!         infsup ("0x1.0468A8ACE4DF6p1", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (1.0, 3.0), infsup (-3.0, -1.0)), ...
+%!         infsup ("0x1.E47DF3D0DD4Dp0", "0x1.68F095FDF593Dp1")))
+%! assert (eq (...
+%!         atan2 (infsup (1.0, 3.0), infsup (-2.0, 0.0)), ...
+%!         infsup ("0x1.921FB54442D18p0", "0x1.56C6E7397F5AFp1")))
+%! assert (eq (...
+%!         atan2 (infsup (1.0, 3.0), infsup (-2.0, 2.0)), ...
+%!         infsup ("0x1.DAC670561BB4Fp-2", "0x1.56C6E7397F5AFp1")))
+%! assert (eq (...
+%!         atan2 (infsup (1.0, 3.0), infsup (0.0, 2.0)), ...
+%!         infsup ("0x1.DAC670561BB4Fp-2", "0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup (1.0, 3.0), infsup (1.0, 3.0)), ...
+%!         infsup ("0x1.4978FA3269EE1p-2", "0x1.3FC176B7A856p0")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, 2.0), infsup (1.0, 3.0)), ...
+%!         infsup ("0x0p0", "0x1.1B6E192EBBE45p0")))
+%! assert (eq (...
+%!         atan2 (infsup (-2.0, 2.0), infsup (1.0, 3.0)), ...
+%!         infsup ("-0x1.1B6E192EBBE45p0", "+0x1.1B6E192EBBE45p0")))
+%! assert (eq (...
+%!         atan2 (infsup (-2.0, 0.0), infsup (1.0, 3.0)), ...
+%!         infsup ("-0x1.1B6E192EBBE45p0", "0x0p0")))
+%! assert (eq (...
+%!         atan2 (infsup (-3.0, -1.0), infsup (1.0, 3.0)), ...
+%!         infsup ("-0x1.3FC176B7A856p0", "-0x1.4978FA3269EE1p-2")))
+%! assert (eq (...
+%!         atan2 (infsup (-3.0, -1.0), infsup (0.0, 2.0)), ...
+%!         infsup ("-0x1.921FB54442D19p0", "-0x1.DAC670561BB4Fp-2")))
+%! assert (eq (...
+%!         atan2 (infsup (-3.0, -1.0), infsup (-2.0, 2.0)), ...
+%!         infsup ("-0x1.56C6E7397F5AFp1", "-0x1.DAC670561BB4Fp-2")))
+%! assert (eq (...
+%!         atan2 (infsup (-3.0, -1.0), infsup (-2.0, 0.0)), ...
+%!         infsup ("-0x1.56C6E7397F5AFp1", "-0x1.921FB54442D18p0")))
+%! assert (eq (...
+%!         atan2 (infsup (-3.0, -1.0), infsup (-3.0, -1.0)), ...
+%!         infsup ("-0x1.68F095FDF593Dp1", "-0x1.E47DF3D0DD4Dp0")))
+%! assert (eq (...
+%!         atan2 (infsup (-2.0, 0.0), infsup (-3.0, -1.0)), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (-5.0, 0.0), infsup (-5.0, 0.0)), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, 5.0), infsup (-5.0, 0.0)), ...
+%!         infsup ("0x1.921FB54442D18p0", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, 5.0), infsup (0.0, 5.0)), ...
+%!         infsup ("0x0p0", "0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup (-5.0, 0.0), infsup (0.0, 5.0)), ...
+%!         infsup ("-0x1.921FB54442D19p0", "0x0p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0), infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x1.2D97C7F3321D2p1", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), inf), infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), 0.0), infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, inf), infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x1.921FB54442D18p0", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023"), infsup ((-inf), "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0), infsup ((-inf), "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p1", "+0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023"), infsup ((-inf), "-0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x1.2D97C7F3321D2p1", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023"), infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p-1", "+0x1.921FB54442D19p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0), infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p-1", "0x0p0")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023"), infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x0p0", "0x1.921FB54442D19p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), inf), infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p0", "+0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), 0.0), infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p0", "0x0p0")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, inf), infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x0p0", "0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023"), infsup ("0x1.FFFFFFFFFFFFFp1023", inf)), ...
+%!         infsup ("-0x1.921FB54442D19p-1", "+0x1.921FB54442D19p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0), infsup ("0x1.FFFFFFFFFFFFFp1023", inf)), ...
+%!         infsup ("-0x1.921FB54442D19p-1", "0x0p0")))
+%! assert (eq (...
+%!         atan2 (infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023"), infsup ("0x1.FFFFFFFFFFFFFp1023", inf)), ...
+%!         infsup ("0x0p0", "0x1.921FB54442D19p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x1.921FB54442D18p-1", "0x1.2D97C7F3321D3p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0)), ...
+%!         infsup ("0x1.921FB54442D18p0", "0x1.2D97C7F3321D3p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023"), infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x1.921FB54442D18p-1", "0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023"), infsup ((-inf), inf)), ...
+%!         infsup ("0x0p0", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023"), infsup ((-inf), 0.0)), ...
+%!         infsup ("0x1.921FB54442D18p0", "0x1.921FB54442D19p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", "0x1.FFFFFFFFFFFFFp1023"), infsup (0.0, inf)), ...
+%!         infsup ("0x0p0", "0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", inf), infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x1.921FB54442D18p-1", "0x1.2D97C7F3321D3p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", inf), infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0)), ...
+%!         infsup ("0x1.921FB54442D18p0", "0x1.2D97C7F3321D3p1")))
+%! assert (eq (...
+%!         atan2 (infsup ("0x1.FFFFFFFFFFFFFp1023", inf), infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("0x1.921FB54442D18p-1", "0x1.921FB54442D19p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.2D97C7F3321D3p1", "-0x1.921FB54442D18p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0)), ...
+%!         infsup ("-0x1.2D97C7F3321D3p1", "-0x1.921FB54442D18p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023"), infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p0", "-0x1.921FB54442D18p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023"), infsup ((-inf), inf)), ...
+%!         infsup ("-0x1.921FB54442D19p1", "0x0p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023"), infsup ((-inf), 0.0)), ...
+%!         infsup ("-0x1.921FB54442D19p1", "-0x1.921FB54442D18p0")))
+%! assert (eq (...
+%!         atan2 (infsup ("-0x1.FFFFFFFFFFFFFp1023", "-0x1.FFFFFFFFFFFFFp1023"), infsup (0.0, inf)), ...
+%!         infsup ("-0x1.921FB54442D19p0", "0x0p0")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), "-0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.2D97C7F3321D3p1", "-0x1.921FB54442D18p-1")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), "-0x1.FFFFFFFFFFFFFp1023"), infsup ("-0x1.FFFFFFFFFFFFFp1023", 0.0)), ...
+%!         infsup ("-0x1.2D97C7F3321D3p1", "-0x1.921FB54442D18p0")))
+%! assert (eq (...
+%!         atan2 (infsup ((-inf), "-0x1.FFFFFFFFFFFFFp1023"), infsup (0.0, "+0x1.FFFFFFFFFFFFFp1023")), ...
+%!         infsup ("-0x1.921FB54442D19p0", "-0x1.921FB54442D18p-1")))
 # Test library imports
 %!function s = to_string (x)
 %!    if (isnumeric (x))
